# voiceeval

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
fixtures/: good_call.json  misheard_call.json  slow_call.json
tests/: test_voiceeval.py
voiceeval/: checks.py  cli.py  score.py  stt.py  turns.py
